lessons/177-azure-kubernetes-service-aks-tutorial-terraform-nginx-ingress-tls-oidc-workload-identity/k8s/3-example/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v1
spec:
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver-v1
