lessons/177-azure-kubernetes-service-aks-tutorial-terraform-nginx-ingress-tls-oidc-workload-identity/k8s/3-example/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v1
spec:
  ingressClassName: external-nginx
  rules:
    - host: echo.antonputra.pvt
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-v1
                port:
                  number: 8080
